# project-euler

./: .flake8  .gitignore  Makefile  README.md  pyproject.toml
1-10/: 1.hs  10.hs  3.hs  4.hs  6.hs  7.hs  8.hs  9.hs
1-10/2/: 2.hs
1-10/3/: 3.hs
1-10/4/: 4.hs
1-10/5/: 5.hs
1-10/8/: 8.hs
1-10/9/: 9.hs
11-20/: 11.hs  12.hs  13.hs  15.hs  16.hs  18.lhs  19.hs  20.hs
21-30/: 22.hs
41-50/: 42.lhs
51-60/: 53.hs  54.hs  55.hs  56.hs  57.hs  58.lhs
61-70/: 63.lhs  67.lhs
91-100/: 92.lhs  97.hs
haskell/1-10/: 1.hs  10.hs  2.hs  3.hs  5.hs  8.hs
haskell/11-20/: 11.hs  14.hs  15.hs  16.hs  17.hs  18.lhs
haskell/21-30/: 21.hs  23.hs
haskell/51-60/: 53.hs  54.hs  59.py
haskell/61-70/: 63.lhs  68.hs  68.lhs
haskell/91-100/: 97.hs  99.hs
java/: pom.xml
java/src/main/java/eu/crydee/projecteuler/: App.java
java/src/main/java/eu/crydee/projecteuler/misc/: Divisors.java  Fibonacci.java  FibonacciSupplier.java  NumberTooBigException.java  NumericStringComparator.java  Primes.java  PrimesSupplier.java  Rational.java  Utils.java
java/src/main/java/eu/crydee/projecteuler/primes/: LongPrimesSupplier.java  Primes.java  PrimesSupplier.java
java/src/main/resources/: log4j.xml
project_euler/: __init__.py  p1_p10.py
src/main/java/eu/crydee/projecteuler/: App.java
src/main/java/eu/crydee/projecteuler/misc/: Divisors.java  Primes.java  Utils.java
src/main/java/eu/crydee/projecteuler/problems/: P11.java  P12.java  P13.java  P15.java  P16.java  P18.java  P19.java  P3.java  P5.java  P67.java  P8.java
(+102 files in other folders)
