[tool.poetry]
authors = ["m09 <142691+m09@users.noreply.github.com>"]
description = "Project Euler exercises."
homepage = "https://github.com/m09/project-euler"
license = "Apache-2.0"
name = "project-euler"
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
attrs = "^20.3.0"
numpy = "^1.19.4"
python = "^3.8"
rich = "^9.5.1"
typer = {version = "^0.3.2", extras = ["all"]}

[tool.poetry.dev-dependencies]
black = "^19.10b0"
flake8 = "^3.7.9"
flake8-bugbear = "^20.1.4"
flake8-docstrings = "^1.5.0"
flake8-import-order = "^0.18.1"
mypy = "^0.770"
pylint = "^2.4.4"

[tool.poetry.scripts]
project-euler = 'project_euler:main'

[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]
